syntax = "proto3";
option go_package = "github.com/BiradarSandeep8/prac/train_ticket";

package train_ticket;

message User {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message Ticket {
    string from = 1;
    string to = 2;
    User user = 3;
    float price_paid = 4;
    string section = 5;
}

message SectionRequest {
    string section = 1;
}

message ModifySeatRequest {
    User user = 1;
    string section = 2;
}

service TrainService {
    rpc PurchaseTicket(Ticket) returns (Ticket);
    rpc GetReceipt(User) returns (Ticket);
    rpc GetUsersBySection(SectionRequest) returns (stream Ticket);
    rpc RemoveUser(User) returns (Ticket);
    rpc ModifySeat(ModifySeatRequest) returns (Ticket);
}
